@@ -1,0 +1,37 @@
+.TH IBPRINTRT 8 "May 30, 2007" "OpenIB" "OpenIB Diagnostics"
+
+.SH NAME
+ibprintrt.pl \- print only the router specified from the ibnetdiscover output
+
+.SH SYNOPSIS
+.B ibprintrt.pl
+[-R -l] [<rt_guid|node_name>]
+
+.SH DESCRIPTION
+.PP
+Faster than greping/viewing with an editor the output of ibnetdiscover,
+ibprintrt.pl will parse out and print only the router information for the
+IB router specified.
+
+Finally, ibprintrt.pl will also reuse the cached ibnetdiscover output from
+some of the other diag tools which makes it a bit faster than running
+ibnetdiscover from scratch.
+
+
+.SH OPTIONS
+
+.PP
+.TP
+\fB\-l\fR
+List the Rts (simply a wrapper for ibrouters).
+.TP
+\fB\-R\fR
+Recalculate the ibnetdiscover information, ie do not use the cached
+information.  This option is slower but should be used if the diag tools have
+not been used for some time or if there are other reasons to believe that
+the fabric has changed.
+
+.SH AUTHOR
+.TP
+Hal Rosenstock
+.RI < halr@voltaire.com >
