@@ -1,0 +1,21 @@
+.TH IBROUTERS 8 "May 30, 2007" "OpenIB" "OpenIB Diagnostics"
+
+.SH NAME
+ibrouters \- show InfiniBand router nodes in topology
+
+.SH SYNOPSIS
+.B ibrouters
+[\-h] [<topology-file>]
+
+.SH DESCRIPTION
+.PP
+ibrouters is a script which either walks the IB subnet topology or uses an 
+already saved topology file and extracts the Rt nodes.
+
+.SH SEE ALSO
+.BR ibnetdiscover(8)
+
+.SH AUTHOR
+.TP
+Hal Rosenstock
+.RI < halr@voltaire.com >
